--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav{
     display:flex;
     justify-content:space-between;
     align-items:center;
-    padding:1;
+    padding:1rem;
 }
 .toggleBtn{
     font-size:1.5rem;
@@ -40,4 +40,54 @@ nav{
 .toggleBtn:hover{
     color:#e74c3c;
     transform:rotate(90deg);
+}
+.links{
+    height:0;
+    overflow:hidden;
+    transition:all 0.3s linear;
+}
+.links a{
+    color:#ecf0f1;
+    text-transform:capitalize;
+    display:block;
+    padding:0.5rem 1rem;
+    transition:all 0.3s linear;
+}
+.links a:hover{
+    background:skyblue;
+    color:#fff;
+    padding-left:1.5rem;
+}
+.active{
+    height:13rem;
+}
+@media screen and (min-width:800px){
+    .nav-container{
+        display:flex;
+        align-items:center;
+        justify-content:space-between;
+        max-width:1170px;
+        margin: 0 auto;
+        padding:1rem;
+    }
+    .header{
+        padding:0;
+    }
+    .toggleBtn{
+        display:none;
+    }
+    .links{
+        display:flex;
+        height:auto;
+    }
+    .links a{
+        padding:0;
+        margin:0 0.5rem;
+    }
+    .links a:hover{
+        padding:0;
+        background:transparent;
+        color:#e74c3c;
+        transform:sclae(1.2);
+    }
 }
